--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "lib":["es5","es2015","dom","es2016","es2017","es2018",],
         "module": "commonjs",
         "target": "es5",
         "noImplicitAny": true,
